# orome

./: .gitignore  Makefile  PLAN.md  README.md  bench_err2.txt  correctness_check.txt  program.md  pyproject.toml  run_experiments.sh
docs/: llama-comparison.md  qwen-35b-a3b.md  qwen-397b-a17b.md  qwen-family.md  research.md
experiments/qwen35-27B/: cross_check.json  debug_findings.md  program.md  results.historical.tsv  results.tsv
experiments/qwen35-35B/: cross_check.json  program.md  results.historical.tsv  results.tsv  results_scope.json  status.md
harness/: Cargo.toml
harness/src/: lib.rs  main.rs  plan.rs  types.rs
harness/src/bus/: mod.rs
harness/src/cli/: mod.rs  plan.rs  run.rs
harness/src/config/: mod.rs
harness/src/dispatch/: mod.rs
harness/src/prompts/: mod.rs  planner.rs  reviewer.rs  worker.rs
harness/src/providers/: claude.rs  codex.rs  mod.rs  orome.rs  types.rs
harness/src/roles/: mod.rs
harness/src/scheduler/: mod.rs
harness/src/tasks/: mod.rs  scratchpad.rs
harness/src/telemetry/: mod.rs
harness/src/tools/: mod.rs
include/: orome.h
schemas/: orome.yaml  plan.yaml
scripts/: run_experiments.sh  smoke_test.sh
src/: attention.m  engine.m  engine_qwen35_hybrid.m  format.m  gguf.m  kernels.m  main.m  metal.m  moe.m  server.m  shaders.metal  tokenizer.m  weights.m
tests/: test_f32  test_q4k  test_q4k.m  test_q8_0
tools/: benchmark.py  build_vocab_bin.py  compare_orome_llama.py  compare_orome_llama_quality.py  compare_orome_llama_tokens.py  export_tokenizer.py  export_vocab.py  extract_weights.py  profile_experts.py  repack_experts.py  repack_experts_2bit.py
(+31 files in other folders)
