[project]
name = "orome-tools"
version = "0.1.0"
description = "Weight extraction, benchmarking, and visualization tools for orome"
requires-python = ">=3.10"
dependencies = [
    "safetensors>=0.4",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pandas>=2.1",
]

[project.scripts]
extract-weights = "tools.extract_weights:main"
repack-experts = "tools.repack_experts:main"
benchmark = "tools.benchmark:main"
progress = "tools.progress:main"
