[package]
name = "orome-harness"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1.89"
axum = "0.8.8"
bytes = "1"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
